@@ -36,17 +36,17 @@
         <dependency>
             <groupId>org.opensaml</groupId>
             <artifactId>opensaml</artifactId>
-            <version>2.2.1</version>
+            <version>2.2.2</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>0.9.8</version>
+            <version>0.9.11</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>0.9.8</version>
+            <version>0.9.11</version>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
@@ -126,7 +126,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>2.5.3</version>
+            <version>2.5.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
@@ -137,7 +137,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-            <version>2.5.3</version>
+            <version>2.5.5</version>
             <exclusions>
                 <exclusion>
                     <artifactId>aopalliance</artifactId>
@@ -164,7 +164,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>2.5.3</version>
+            <version>2.5.5</version>
             <exclusions>
                 <exclusion>
                     <artifactId>aopalliance</artifactId>
@@ -187,7 +187,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>2.5.3</version>
+            <version>2.5.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
@@ -198,7 +198,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>2.5.3</version>
+            <version>2.5.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
@@ -209,7 +209,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>2.5.3</version>
+            <version>2.5.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
