@@ -18,10 +18,8 @@ package edu.internet2.middleware.shibboleth.common.attribute.resolver.provider.a
 
 import java.security.NoSuchAlgorithmException;
 
-import org.joda.time.DateTime;
 import org.opensaml.common.IdentifierGenerator;
 import org.opensaml.common.impl.SecureRandomIdentifierGenerator;
-import org.opensaml.util.storage.ExpiringObject;
 import org.opensaml.util.storage.StorageService;
 
 import edu.internet2.middleware.shibboleth.common.attribute.BaseAttribute;
@@ -33,14 +31,14 @@ import edu.internet2.middleware.shibboleth.common.profile.provider.SAMLProfileRe
 /**
  * An attribute definition that generates random identifiers useful for transient subject IDs.
  * 
- * Information about the created IDs are stored within a provided {@link StorageService} in the form of {@link IdEntry}s.
+ * Information about the created IDs are stored within a provided {@link StorageService} in the form of {@link TransientIdEntry}s.
  * Each entry is mapped under two keys; the generated ID and a key derived from the tuple (outbound message issuer,
  * inbound message issuer, principal name).
  */
 public class TransientIdAttributeDefinition extends BaseAttributeDefinition {
 
     /** Store used to map tokens to principals. */
-    private StorageService<String, IdEntry> idStore;
+    private StorageService<String, TransientIdEntry> idStore;
 
     /** Storage partition in which IDs are stored. */
     private String partition;
@@ -62,7 +60,7 @@ public class TransientIdAttributeDefinition extends BaseAttributeDefinition {
      * @throws NoSuchAlgorithmException thrown if the SHA1PRNG, used as the default random number generation algorithm,
      *             is not supported
      */
-    public TransientIdAttributeDefinition(StorageService<String, IdEntry> store) throws NoSuchAlgorithmException {
+    public TransientIdAttributeDefinition(StorageService<String, TransientIdEntry> store) throws NoSuchAlgorithmException {
         idGenerator = new SecureRandomIdentifierGenerator();
         idStore = store;
         partition = "transientId";
@@ -84,10 +82,10 @@ public class TransientIdAttributeDefinition extends BaseAttributeDefinition {
                 requestContext.getInboundMessageIssuer()).append("!").append(requestContext.getPrincipalName());
         String principalTokenId = principalTokenIdBuilder.toString();
 
-        IdEntry tokenEntry = idStore.get(partition, principalTokenId);
+        TransientIdEntry tokenEntry = idStore.get(partition, principalTokenId);
         if (tokenEntry == null || tokenEntry.isExpired()) {
             String token = idGenerator.generateIdentifier(idSize);
-            tokenEntry = new IdEntry(idLifetime, requestContext.getInboundMessageIssuer(), requestContext
+            tokenEntry = new TransientIdEntry(idLifetime, requestContext.getInboundMessageIssuer(), requestContext
                     .getPrincipalName(), token);
             idStore.put(partition, token, tokenEntry);
             idStore.put(partition, principalTokenId, tokenEntry);
@@ -139,78 +137,5 @@ public class TransientIdAttributeDefinition extends BaseAttributeDefinition {
     /** {@inheritDoc} */
     public void validate() throws AttributeResolutionException {
 
-    }
-
-    /** Storage service entry used to store information associated with a id. */
-    public class IdEntry implements ExpiringObject {
-
-        /** Time this entry expires. */
-        private DateTime expirationTime;
-
-        /** Relying party the token was issued to. */
-        private String relyingPartyId;
-
-        /** Principal for which the token was issued. */
-        private String principalName;
-
-        /** Random token. */
-        private String id;
-
-        /**
-         * Constructor.
-         * 
-         * @param lifetime lifetime of the token in milliseconds
-         * @param relyingParty relying party the token was issued to
-         * @param principal principal the token was issued for
-         * @param randomId the random ID token
-         */
-        public IdEntry(long lifetime, String relyingParty, String principal, String randomId) {
-            expirationTime = new DateTime().plus(lifetime);
-            relyingPartyId = relyingParty;
-            principalName = principal;
-            id = randomId;
-        }
-
-        /**
-         * Gets the principal the token was issued for.
-         * 
-         * @return principal the token was issued for
-         */
-        public String getPrincipalName() {
-            return principalName;
-        }
-
-        /**
-         * Gets the relying party the token was issued to.
-         * 
-         * @return relying party the token was issued to
-         */
-        public String getRelyingPartyId() {
-            return relyingPartyId;
-        }
-
-        /**
-         * Gets the ID.
-         * 
-         * @return ID
-         */
-        public String getId() {
-            return id;
-        }
-
-        /** {@inheritDoc} */
-        public DateTime getExpirationTime() {
-            return expirationTime;
-        }
-
-        /** {@inheritDoc} */
-        public boolean isExpired() {
-            return expirationTime.isBeforeNow();
-        }
-
-        /** {@inheritDoc} */
-        public void onExpire() {
-
-        }
     }
 }
