@@ -23,7 +23,7 @@ import org.opensaml.util.storage.StorageService;
 
 import edu.internet2.middleware.shibboleth.common.attribute.resolver.AttributeResolutionException;
 import edu.internet2.middleware.shibboleth.common.attribute.resolver.provider.ShibbolethResolutionContext;
-import edu.internet2.middleware.shibboleth.common.attribute.resolver.provider.attributeDefinition.TransientIdAttributeDefinition.IdEntry;
+import edu.internet2.middleware.shibboleth.common.attribute.resolver.provider.attributeDefinition.TransientIdEntry;
 import edu.internet2.middleware.shibboleth.common.profile.provider.SAMLProfileRequestContext;
 
 /**
@@ -32,7 +32,7 @@ import edu.internet2.middleware.shibboleth.common.profile.provider.SAMLProfileRe
 public class TransientPrincipalConnector extends BasePrincipalConnector {
 
     /** Store used to map transient identifier tokens to principal names. */
-    private StorageService<String, IdEntry> identifierStore;
+    private StorageService<String, TransientIdEntry> identifierStore;
 
     /** Storage partition in which IDs are stored. */
     private String partition;
@@ -42,7 +42,7 @@ public class TransientPrincipalConnector extends BasePrincipalConnector {
      * 
      * @param store the backing store used to map transient identifier tokens to principal names
      */
-    public TransientPrincipalConnector(StorageService<String, IdEntry> store) {
+    public TransientPrincipalConnector(StorageService<String, TransientIdEntry> store) {
         if (store == null) {
             throw new IllegalArgumentException("Identifier store may not be null");
         }
@@ -74,7 +74,7 @@ public class TransientPrincipalConnector extends BasePrincipalConnector {
             throw new AttributeResolutionException("Invalid subject name identifier");
         }
 
-        IdEntry idToken = identifierStore.get(partition, transientId);
+        TransientIdEntry idToken = identifierStore.get(partition, transientId);
         if (idToken == null || idToken.isExpired()) {
             throw new AttributeResolutionException("No information associated with transient identifier: "
                     + transientId);
